fixed button spacing and link issues in index tables

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5804,3 +5804,8 @@ button.close {
   background-color: #fff;
   color: #772953;
 }
+
+.btn a {
+  text-decoration: none;
+  color: #ffffff;
+}
